Fixes to modal z-index and body-scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,7 @@ a.info-section-button-dark:hover{
 	position: fixed;
 	padding: 0 15px;
     width: 100%;
-    z-index: 999;
+    z-index: 100;
     background: #fff;
 	opacity: 0;
 	top: -90px;
@@ -500,12 +500,12 @@ a.info-section-button-dark:hover{
 		margin: 30px 0px;
 	}
 	.main-header{
-		font-size: 1.7rem;
+		font-size: 1.6rem;
 		letter-spacing: -.02em;
 		margin: 30px 0px 10px 0px;
 	}
 	.sub-header{
-		font-size: 1.4rem;
+		font-size: 1.3rem;
 	}
 	.nav{
 		padding: 15px 0px;
@@ -557,9 +557,12 @@ a.info-section-button-dark:hover{
 		border:none;
 		width: 100%;
 		border-radius: 0px;
-		padding: 20px;
+		padding: 7px;
 	}
 	.inner-modal{
 		padding: 30px 15px 20px;
+	}
+	.sticky-header-hash-container{
+		display: none;
 	}
 }
